recursion.cons.lessons.recursion.cons.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
	def fonctionInterne(l:List[Int], mem:Int): Boolean ={
		if(l==Nil){
			return true;
		}
		else if (mem=<l.head) {
			return fonctionInterne(l.tail,l.head);
		}
		else {
			return false;
		}
	}
	return fonctionInterne(l.tail,l.head);
}
